public/css/home.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
/*https://www.realtimecolors.com/?colors=f1f1f1-1c1c1c-84b7dc-c1ddf0-06F7FF&fonts=Inter-Inter*/

*{
    margin: 0;
    scroll-behavior: smooth;
    box-sizing: border-box;
}

html{
    margin: 0;
}
:root{
    --bg-color: #1c1c1c;
    --primary-color: #84b7dc;
    --secondary-color: #c1ddf0;
    --text-color: #F1F1F1;
    --accent-color: #06F7FF; 
}
body{
    color: var(--text-color);
    background-color: var(--bg-color);
    background-repeat: no-repeat;
    background-size: cover;
    font-family: 'Montserrat', sans-serif;
    margin: 0;
    padding: 0;
    height: 100%;
    scrollbar-width: none; 
    -ms-overflow-style: none;
    scroll-behavior: smooth;
    overflow-x: hidden;
}
::-webkit-scrollbar {
    width: 0px; 
    display: none; 
}

::selection {
    color: var(--text-color); 
    background-color: #378bc8;
    animation: gradientHighlight 1s infinite alternate; 
}

@keyframes gradientHighlight {
    0% { background-position: 0% 50%; }
    100% { background-position: 100% 50%; }
}

a{
    text-decoration: none;
}

/*

NAVBAR

*/
nav {
    margin: 0;
    position: fixed;
    left: 50%;
    top: 3%;
    transform: translate(-50%);
    z-index: 99999;
    backdrop-filter: blur(10px);
    border-radius: 8px;
    padding: 5px 10px; 
    width: auto;
}

.nav-item {
    max-width: 100%;
    display: flex;
    gap: 40px;
    font-weight: 700;
    font-size: 1rem;
    padding: 5px; 
    min-width: 100px;
}

.nav-item a {
    color: var(--text-color);
    text-decoration: none;
    padding: 5px;
    border-radius: 8px;
}

.nav-item a:hover {
    background-color: transparent;
    color: var(--primary-color);
    transition: 0.3s color ease-in-out, 0.3s background-color ease-in-out;
}

.nav-item a:active {
    background-color: transparent;
    color: var(--accent-color);
    transition: 0.5s color ease;
}

.hamburger {
    display: none;
    cursor: pointer;
    font-size: 1.5rem;
}


@media screen and (max-width: 768px) {
    nav {
        top: 3px;
        left: 3px;
        padding: 5px 10px;
        transform: none;
    }

    .nav-item {
        display: none;
        flex-direction: column;
        position: absolute;
        top: 100%;
        left: 0;
        width: 30%;
        background: rgba(255, 255, 255, 0.9);
        padding: 10px 5px;
        border-radius: 4px;
        gap: 10px;
        text-align: start;
    }

    .nav-item a {
        color: var(--bg-color);
        text-align: start;
        padding: 5px;
        font-size: 14px;
        width: 100%;
    }

    .nav-item.active {
        display: flex;
    }

    .hamburger {
        display: block;
    }
}
@media screen and (max-width: 360px) {
    nav {
        top: 3px;
        left: 3px;
        padding: 5px 10px;
        transform: none;
    }

    .nav-item {
        display: none;
        flex-direction: column;
        position: absolute;
        top: 100%;
        left: 0;
        width: 30%;
        background: rgba(255, 255, 255, 0.95);
        padding: 10px 5px;
        gap: 8px;
        border-radius: 4px;
    }

    .nav-item a {
        color: var(--bg-color);
        text-align: start;
        padding: 5px;
        font-size: 14px;
        width: 100%;
    }

    .nav-item.active {
        display: flex;
    }

    .hamburger {
        display: block;
        font-size: 1.2rem;
    }
}

/*

Contacts

*/
.contacts {
    margin: 0;
    position: fixed;
    left: 10px;
    top: 50%;
    transform: translateY(-50%);
    z-index: 99999;
    backdrop-filter: blur(10px);
    border-radius: 8px;
    padding: 20px 5px; 
    width: auto;
}
.contacts-item{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
}
.contacts-item a{
    color: var(--text-color);
    margin: 0 10px;
    text-decoration: none;
    font-size: 20px;
}
.contacts-item a:hover{
    background-color: transparent;
    color: var(--primary-color);
    transition: 0.3s color ease-in-out, 0.3s background-color ease-in-out;
}

@media screen and (max-width: 768px) {
    .contacts {
        margin: 0;
        position: fixed;
        left: 50%;
        top: 5px; 
        transform: translate(-50%); 
        z-index: 99999;
        padding: 8px 20px;
    }
    
    .contacts-item {
        display: flex;
        flex-direction: row;
        gap: 15px;
        align-items: center;
    }

    .contacts-item a{
        margin: 0;
        text-decoration: none;
        font-size: 18px;
    }
}
@media screen and (max-width: 360px) {
    .contacts {
        margin: 0;
        position: fixed;
        left: 50%;
        top: 5px; 
        transform: translate(-50%); 
        z-index: 99999;
        padding: 8px 20px;
    }
    
    .contacts-item {
        display: flex;
        flex-direction: row;
        gap: 15px;
        align-items: center;
    }

    .contacts-item a {
        margin: 0;
        text-decoration: none;
        font-size: 16px; 
        text-align: center; 
    }
}

/*

INTRO

*/
.intro{
    margin: 0;
}

.intro-item{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 810px;
    flex-direction: column;
    overflow-x: hidden;
}

.intro-fonts{
    position: absolute;
    z-index: 1;
}

.intro-item h1{
    font-size: 5rem;
    font-weight: 900;
    letter-spacing: 10px;
    margin-top: 50px;
}

.intro-item h2{
    font-size: 2rem;
    font-weight: 500;
    letter-spacing: 5px;
    text-wrap:nowrap;
}

.intro-item span{
    position: relative;
}
.intro-item span::before{
    content: "Data Scientist";
    animation: words 10s infinite;
}
.intro-item span::after{
    content: "";
    background-color: var(--bg-color);
    position: absolute;
    animation: cursor 0.6s infinite, typing 10s steps(14) infinite;
    width: calc(100% + 8px);
    height: 100%;
    border-left: 3px solid var(--bg-color);
    right: -8px;
}
/* ... */

